src/test/run-pass/vector-no-ann-2.rs
fn main() { let quux: @vec[uint] = @[]; }