src/test/compile-fail/fail-type-err.rs
// error-pattern:expected str but found vec
fn main() { fail []; }